# Cooperative-Positioning-Filters

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml
config/: example.yaml
docs/: Doxyfile  README_8md.html  _formulas.dvi  _formulas.tex  _formulas_dark.dvi  _formulas_dark.tex  annotated.html  classEKF-members.html  classEKF.html  classEKF__coll__graph.map  classEKF__inherit__graph.map  classEKF__inherit__graph.md5  classFilter-members.html  classFilter.html  classFilter__inherit__graph.map  classFilter__inherit__graph.md5  classIEKF-members.html  classIEKF.html  classIEKF__coll__graph.map  classIEKF__inherit__graph.map  classIEKF__inherit__graph.md5  classInformationFilter-members.html  classInformationFilter.html  classInformationFilter__coll__graph.map  classInformationFilter__inherit__graph.md5  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  ekf_8cpp.html  ekf_8cpp__incl.map  ekf_8cpp__incl.md5  ekf_8h.html  ekf_8h__dep__incl.map  ekf_8h__dep__incl.md5  ekf_8h__incl.map  ekf_8h__incl.md5  ekf_8h_source.html  (+53 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  pages_0.js  pages_1.js  (+23 more)
include/: cmekf.h  ekf.h  estimation_parameters.h  filter.h  gbp.h  iekf.h  information_filter.h  particle.h  types.h
include/CL/: Inference.hpp  Robot.hpp  agent.hpp  inference.hpp  landmark.hpp  robot.hpp
include/CL/agent/: adversarial_landmark.hpp  agent.hpp  faulty_robot.hpp  landmark.hpp  robot.hpp
include/CL/common/: config.hpp  estimation_parameters.hpp  matrix_operations.hpp  odometry.hpp  types.hpp
include/CL/filters/: cmekf.hpp  ekf.hpp  filter.hpp  iekf.hpp  information_filter.hpp  particle.hpp
include/CL/models/: measurement.hpp  process.hpp  range.hpp  range_bearing.hpp
include/CL/sensors/: meas_data.hpp  meas_set.hpp  measurements.hpp  odom_data.hpp  odometry.hpp
include/CL/utils/: matrix_operations.hpp  performance_eval.hpp  utils.hpp
include/CLFilters/: cmekf.hpp  ekf.hpp  filter.hpp  iekf.hpp  information_filter.hpp  particle.hpp
include/CLFilters/common/: estimation_parameters.hpp  matrix_operations.hpp
include/CLFilters/models/: measurement.hpp  process.hpp
scripts/: innovation.gp
src/: agent.cpp  cmekf.cpp  debug.cpp  ekf.cpp  filter.cpp  gbp.cpp  iekf.cpp  inference.cpp  information_filter.cpp  landmark.cpp  main.cpp  particle.cpp  robot.cpp
src/agent/: adversarial_landmark.cpp  agent.cpp  faulty_robot.cpp  landmark.cpp  robot.cpp
src/common/: config.cpp  matrix_operations.cpp
src/filters/: cmekf.cpp  ekf.cpp  filter.cpp  iekf.cpp  information_filter.cpp  particle.cpp
src/models/: measurement.cpp  process.cpp  range.cpp  range_bearing.cpp
src/sensors/: meas_data.cpp  meas_set.cpp  measurements.cpp  odom_data.cpp  odometry.cpp
src/utils/: matrix_operations.cpp  performance_eval.cpp
